# tower-of-babel

./: .env.example  .gitignore  Makefile  README.md  docker-compose.cloud.yml  docker-compose.yml  renovate.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: renovate.yml  smoke-test.yml
.junie/: guidelines.md
.kiro/steering/: library-documentation.md  product.md  structure.md  tech.md
.windsurf/rules/: build-commands.md  java-kotlin-testing.md  kafka-core.md  python-testing.md  schema-evolution.md  typescript-testing.md
docs/: SCHEMA_EVOLUTION.md  data-pipeline-sequence.mmd  data-pipeline.mmd  plan.md  requirements.md  tasks.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
schemas/incompatible/: README.md  order-event-field-rename.avsc  order-event-type-change.avsc  order-event.avsc
schemas/v1/: payment-event.avsc
schemas/v2/: order-event.avsc
scripts/: QUICK_REFERENCE.md  README.md  cleanup-topics.sh  demo-ready.sh  evolve-schema.sh  phase4-demo.sh  register-schemas.sh  setup-cloud-config.sh  start-avro-services.sh  start-broken-services.sh  stop-broken-services.sh  test-phase4.sh  wait-for-services.sh
scripts/demo/: DEMO-1C-TYPE-INCONSISTENCY-GUIDE.md  README.md  demo-1-tower-of-babel.sh  demo-2-babel-fish-comprehensive.sh  demo-2-babel-fish.sh  demo-3-safe-evolution.sh  demo-4-breaking-change-blocked.sh  trigger-java-serialization-failure.sh  trigger-json-mismatch-failure.sh  trigger-normal-flow.sh  trigger-type-inconsistency-failure.sh
scripts/test/: README.md  test-1-serialization-failures.sh  test-2-avro-integration.sh  test-3-schema-evolution.sh  test-4-compatibility-checks.sh
scripts/utils/: README.md  cleanup-schemas.sh  register-schemas.sh
services/analytics-api/: README.md  (+4 more)
services/inventory-service/: README.md  check_env.py  pyproject.toml  requirements.txt
services/inventory-service/inventory_service/: __init__.py  main.py
services/inventory-service/inventory_service/consumer/: __init__.py  avro_kafka_consumer.py  kafka_consumer.py
services/inventory-service/scripts/: generate_classes.py  smoke_test.py
services/inventory-service/src/public/: dashboard.css  dashboard.html  dashboard.js
(+31 files in other folders)
