[project]
name = "inventory-service"
version = "0.1.0"
description = "Inventory Service for Kafka Schema Registry Demo"
authors = [
    {name = "Demo Author", email = "demo@example.com"},
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "pydantic>=2.12.5",
    "confluent-kafka>=2.13.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "avro-python3>=1.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.28.1",
    "black>=23.10.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inventory_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
